# KMA-PAS

./: .gitignore  README.md  pyproject.toml
src/kma_pas/: main.py
