[project]
name = "kma-pas"
version = "0.1.0"
description = ""
authors = [
    {name = "Martin Kopecky",email = "kopecky@thekrew.app"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotnine (>=0.15.0,<0.16.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "jupyterlab (>=4.4.9,<5.0.0)",
    "ipykernel (>=7.0.1,<8.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "vega-datasets (>=0.9.0,<0.10.0)",
    "pandasgui (>=0.2.15,<0.3.0)",
    "rpy2 (>=3.6.4,<4.0.0)"
]

[tool.poetry]
packages = [{include = "kma_pas", from = "src"}]

[tool.poetry.scripts]
kma-pas = "kma_pas.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
